<resources>
    <string name="app_name">Skinifier</string>
    <string name="photo">photo</string>
    <string name="judul">judul</string>
    <string name="deskripsi">deskripsi</string>
    <string name="article">Article</string>
    <string name="article_detail">Article Detail</string>
    <string name="backbutton">backButton</string>
    <string name="oily_skin">Oily Skin</string>
    <string name="dry_skin">Dry Skin</string>
    <string name="normal_skin">Normal Skin</string>
    <string name="acne_skin">Acne Skin</string>
    <string name="searchbar_hint">What are you looking for?</string>
    <string name="faceScan">Scan your face</string>
    <string name="gallery">gallery</string>
    <string name="add_products">Add Products</string>
    <string name="foto">Foto:</string>
    <string name="brand">Brand Name:</string>
    <string name="brand_name">brand name</string>
    <string name="product_type">Product Type:</string>
    <string name="description">Description:</string>
    <string name="price">Price:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="ingredients">Ingredients:</string>
    <string name="domicile">Domicile:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signup_successful">Signup Successful</string>
    <string name="continue_main">Continue</string>
    <string name="empty_fields_warning">All fields are required</string>
    <string name="login_successful">Login Successful</string>
    <string name="welcome_to_skinifier">Welcome to Skinifier</string>
    <string name="loginAgain">Please Login Again</string>

    <string name="logout_confirmation">Logout Confirmation</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>

    <string-array name="skin_type">
        <item>Berminyak</item>
        <item>Kering</item>
        <item>Normal</item>
        <item>Jerawat</item>
    </string-array>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_scan">Scan</string>
    <string name="title_product">Product</string>
    <string name="title_profile">Profile</string>
    <string name="favorite">fav</string>
</resources>