<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/myBackgroundColor"
    tools:context=".ArticleActivity">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="25dp"
        android:layout_height="27dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:background="@null"
        android:contentDescription="@string/backbutton"
        android:src="@drawable/arrow_back_ios_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/button_oily"
        android:layout_width="70dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:padding="0dp"
        android:text="@string/oily_skin"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actTitle" />

    <Button
        android:id="@+id/button_dry"
        android:layout_width="70dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:padding="0dp"
        android:text="@string/dry_skin"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/button_oily"
        app:layout_constraintTop_toBottomOf="@+id/actTitle" />

    <Button
        android:id="@+id/button_normal"
        android:layout_width="90dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:padding="0dp"
        android:text="@string/normal_skin"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/button_dry"
        app:layout_constraintTop_toBottomOf="@+id/actTitle" />

    <Button
        android:id="@+id/button_acne"
        android:layout_width="80dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:padding="0dp"
        android:text="@string/acne_skin"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/button_normal"
        app:layout_constraintTop_toBottomOf="@+id/actTitle" />

    <TextView
        android:id="@+id/actTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="28dp"
        android:text="@string/article"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_article"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actTitle"
        tools:listitem="@layout/article_row"/>

</androidx.constraintlayout.widget.ConstraintLayout>